# renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  deploy.bat  renderer.cmake
assets/pipelines/: imgui.json  imgui_hdr.json  tone_map.json  tone_map_debug.json  tone_map_hdr.json  tonemap.json
assets/pipelines/draw/: basic_draw.json
assets/pipelines/g_buffer/: g_buffer_draw.json
assets/pipelines/ocean/: composite.json  debug_render_normals.json  debug_render_slopes.json  render_patch.json  render_patch_depth_prepass.json  render_patch_depth_prepass_wireframe.json  render_patch_wireframe.json
assets/pipelines/ray_tracing/: simple_ray_tracing.json
assets/shaders/: .gitignore  complex.hlsli  constants.hlsli  exposure.cs.hlsl  fft.cs.hlsl  fft.cs.json  fft_min_max_resolve.cs.hlsl  fft_min_max_resolve.cs.json  fullscreen_triangle.vs.hlsl  fullscreen_triangle.vs.json  luminance_histogram.cs.hlsl  luminance_histogram_average.cs.hlsl  skybox.cs.hlsl  skybox.cs.json  tone_map.ps.hlsl  tone_map.ps.json  tonemap.ps.hlsl  tonemap.ps.json  trigonometry.hlsli
assets/shaders/atmosphere/hosek_wilkie/: generate_cubemap.cs.hlsl
assets/shaders/common/: cubemap_utils.hlsli  equirectangular_to_cubemap.cs.hlsl  equirectangular_to_cubemap.cs.json  erf.hlsli  mipmap_gen.cs.hlsl  mipmap_gen.cs.json  nop.ps.hlsl  nop.ps.json  octahedron_encoding.hlsli  projection.hlsli  sampling.hlsli
assets/shaders/common/color/: color_spaces.hlsli  transfer_functions.hlsli
assets/shaders/common/noise/: blue_noise_64.hlsli
assets/shaders/common/pbr/: brdf_bake.cs.hlsl  brdf_bake.cs.json  ibl_prefilter_diffuse.cs.hlsl  ibl_prefilter_diffuse.cs.json  ibl_prefilter_specular.cs.hlsl  ibl_prefilter_specular.cs.json  light_units.hlsli  lighting.hlsli  pbr.hlsli
assets/shaders/common/rt/: ray_offset.hlsli  ray_query.hlsli
assets/shaders/draw/: basic_draw.hlsli  basic_draw.ps.hlsl  basic_draw.ps.json  basic_draw.vs.hlsl  basic_draw.vs.json
assets/shaders/g_buffer/: g_buffer_draw.hlsli  g_buffer_draw.ps.hlsl  g_buffer_draw.vs.hlsl  resolve.cs.hlsl  resolve.cs.json
assets/shaders/imgui/: imgui.hlsli  imgui.ps.hlsl  imgui.ps.json  imgui.vs.hlsl  imgui.vs.json
assets/shaders/ocean/: compose.ps.hlsl  compose.ps.json  debug_render.ps.hlsl  debug_render.ps.json  debug_render_normal.vs.hlsl  debug_render_normal.vs.json  debug_render_slope.vs.hlsl  debug_render_types.hlsli  initial_spectrum.cs.hlsl  ocean_patch_types.hlsli  ocean_render_utils.hlsli  oceanography.hlsli  patch.vs.hlsl  patch.vs.json  reorder.cs.hlsl  reorder.cs.json  surface.ps.hlsl  surface.ps.json  time_dependent_spectrum.cs.hlsl
assets/shaders/ray_tracing/: simple_ray_tracing.rchit.hlsl  simple_ray_tracing.rgen.hlsl  simple_ray_tracing.rmiss.hlsl
assets/shaders/rt/: trace_shadow_rays.cs.hlsl
assets/shaders/rt_shadows/: rt_shadows_trace.cs.hlsl
assets/shaders/tone_map/: debug.ps.hlsl  debug.ps.json  debug.vs.hlsl  debug.vs.json
scripts/: bin_to_hex_char_array.py  generate_compute_pso_library.cmake  generate_compute_pso_library.py  shaders.cmake
src/: CMakeLists.txt
src/asset_baker/asset_baker/: CMakeLists.txt  bc7enc_rdo.cpp  bc7enc_rdo.hpp  gltf_accessor.cpp  gltf_accessor.hpp  gltf_loader.cpp  gltf_loader.hpp  hdr_image_loader.cpp  hdr_image_loader.hpp  main.cpp  stb_impl.cpp
src/renderer/renderer/: CMakeLists.txt  acceleration_structure_builder.cpp  acceleration_structure_builder.hpp  application.cpp  application.hpp  asset.hpp  asset_manager.cpp  asset_manager.hpp  gpu_transfer.cpp  gpu_transfer.hpp  imgui_renderer.cpp  imgui_renderer.hpp  input_codes.hpp  logger.cpp  logger.hpp  main.cpp  render_pass.cpp  render_pass.hpp  render_resource_blackboard.cpp  render_resource_blackboard.hpp  renderer.cpp  renderer.hpp  resource_state_tracker.cpp  resource_state_tracker.hpp  shader_manager.cpp  shader_manager.hpp  window.cpp  window.hpp
src/renderer/renderer/asset/: CMakeLists.txt  asset_formats.hpp  asset_repository.cpp  asset_repository.hpp  compute_library.cpp  compute_library.hpp  gltf_loader.cpp  gltf_loader.hpp  graphics_pipeline_library.cpp  graphics_pipeline_library.hpp  pipeline.cpp  pipeline.hpp  pipeline_library.cpp  pipeline_library.hpp  shader_library.cpp  shader_library.hpp
src/renderer/renderer/cbt/: CMakeLists.txt  cbt_cpu.cpp  cbt_cpu.hpp
src/renderer/renderer/filesystem/: CMakeLists.txt  file_util.cpp  file_util.hpp  file_watch.cpp  file_watch.hpp  mapped_file.cpp  mapped_file.hpp
src/renderer/renderer/imgui/: CMakeLists.txt  imgui_renderer.cpp  imgui_renderer.hpp  imgui_util.cpp  imgui_util.hpp  renderer_settings.cpp  renderer_settings.hpp
src/renderer/renderer/math/: CMakeLists.txt  projection.cpp  projection.hpp
src/renderer/renderer/ocean/: CMakeLists.txt  ocean_renderer.cpp  ocean_renderer.hpp  ocean_resources.cpp  ocean_resources.hpp  ocean_settings.cpp  ocean_settings.hpp
src/renderer/renderer/scene/: CMakeLists.txt  camera.cpp  camera.hpp  model.hpp  scene.cpp  scene.hpp
src/renderer/renderer/techniques/: CMakeLists.txt  brdf_bake.cpp  brdf_bake.hpp  exposure.cpp  exposure.hpp  g_buffer.cpp  g_buffer.hpp  hillaire_sky.cpp  hillaire_sky.hpp  hosek_wilkie_sky.cpp  hosek_wilkie_sky.hpp  hosek_wilkie_sky_data.hpp  image_based_lighting.cpp  image_based_lighting.hpp  imgui.cpp  imgui.hpp  ocean.cpp  ocean.hpp  rt_soft_shadows.cpp  rt_soft_shadows.hpp  simple_ray_tracing.cpp  simple_ray_tracing.hpp  technique_base.hpp  tone_map.cpp  tone_map.hpp
src/shaders/renderer/: CMakeLists.txt  fft.cs.json  shared_types.hlsli  util.hlsli
src/shaders/shaders/: CMakeLists.txt  complex.hlsli  fft.cs.hlsl  fft.cs.json  fft_shared_types.hlsli  fullscreen_triangle.vs.hlsl  rand.hlsli  shared_types.hlsli  util.hlsli
src/shared/shared/: camera_shared_types.h  draw_shared_types.h  exposure_shared_types.h  fft_shared_types.h  g_buffer_shared_types.h  hosek_wilkie_shared_types.h  ibl_shared_types.h  mipmap_gen_shared_types.h  ocean_shared_types.h  rt_shadows_shared_types.h  scene_shared_types.h  serialized_asset_formats.hpp  shared_resources.h  shared_types.h  tone_map_shared_types.h  tonemap_shared_types.h
(+22 files in other folders)
